--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <title>Luong Tuan Anh</title>
     <link rel="stylesheet" href="./styles/style.css">
@@ -13,14 +12,35 @@
 <body>
 <main>
     <!--Navigation -->
+    <section class="animation-from-left-to-right navigation-expended">
+        <div class="nav-menu_exp">
+            <div class="nav-menu_exp--heading">
+
+            </div>
+            <div class="nav-menu_exp--list">
+                <ul>
+                    <li><a href="#information-home">Home</a></li>
+                    <li><a href="#information-aboutme">About me</a></li>
+                    <li><a href="#information-education">Education</a></li>
+                    <li><a href="#information-contact">Contact</a></li>
+                </ul>
+            </div>
+        </div>
+    </section>
     <nav class="navbar-top">
         <div class="nav-container">
+            <div class="nav-expand-button">
+                <svg width="30" height="30" viewBox="0 0 30 30" aria-hidden="true">
+                    <path stroke="currentColor" stroke-linecap="round" stroke-miterlimit="10" stroke-width="2"
+                          d="M4 7h22M4 15h22M4 23h22"></path>
+                </svg>
+            </div>
             <div class="nav-container_logo">
             </div>
             <div class="nav-container_menu">
                 <ul class="nav-container_menu--ul">
                     <li><a class="nav-actived" href="#information-home">Home</a></li>
-                    <li><a id="about-me-z" href="#information-aboutme">About me</a></li>
+                    <li><a id="about-me-z" href="#information-aboutme">About&nbsp;me</a></li>
                     <li><a href="#information-education">Education</a></li>
                     <li><a href="#information-contact">Contact</a></li>
                 </ul>
